--- a/docs/TW100/TW100.md
+++ b/docs/TW100/TW100.md
@@ -3,7 +3,7 @@ date: 2021-07-22
 sidebar_position: 1
 ---
 
-# TW100 Series
+# TW100 Series Overview
 
 티웨어랩의 TW100 Series는 프로토콜 변환기 역할을 하는 임베디드 모듈입니다.
 시리얼 장비가 보낸 데이터를 TCP/IP 데이터로 변환시켜 네트워크로 전송시키는 역할과 네트워크를 통해 받은 TCP/IP 데이터를 시리얼 데이터로 전환시킨 후 전송하는 역할을 합니다.
