--- a/docs/TW100/TW100.md
+++ b/docs/TW100/TW100.md
@@ -35,16 +35,16 @@ sidebar_position: 1
 - [TW100XX Configuration Tool Manual V1.0 - Korean](pdf/TW100xx_Configuraion_Tool_Manual-Rev1.0.pdf)
 
 ### Web Version
-- [TW100xx Datasheet](tw100xx-datasheet.md)
+- [TW100xx Datasheet](./tw100xx-datasheet.md)
 - [TW100xx User Manual](./tw100xx-user-manual.md)
 - [TW100xx Configuration Tool Manual ](./tw100xx-configuration-tool-manual.md)
 
 ### Tutorials
-- [TW100xx EVB Getting Started](Tutorials/TW100xx-EVB-Getting-Started.md)
+- [TW100xx EVB Getting Started](./Tutorials/TW100xx-EVB-Getting-Started.md)
 - [S2E Test Tool Tutorial](Tutorials/s2e-testtool-tutorial.md)
 
 ## Download
 
 TW100xx 모듈의 최종 바이너리 파일이나 Configuration Tool을 포함한 각종 Tool을 다운로드 받을 수 있다.
 
-[Download Page](download.mdS)
+[Download Page](download.md)
